--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "panhub.shenzjd.com",
+  "name": "panhub.apprcn.com",
   "version": "1.0.0",
-  "description": "PanHub · 全网最全的网盘搜索工具",
+  "description": "反斗网盘搜索 · 全网最全的网盘搜索工具",
   "type": "module",
   "private": true,
   "author": {
-    "name": "shenzjd",
-    "url": "https://github.com/wu529778790/panhub.shenzjd.com"
+    "name": "fandou",
+    "url": "https://panhub.apprcn.com"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wu529778790/panhub.shenzjd.com.git"
+    "url": "git+https://github.com/alantang1977/panhub.git"
   },
   "bugs": {
-    "url": "https://github.com/wu529778790/panhub.shenzjd.com/issues"
+    "url": "https://github.com/alantang1977/panhub/issues"
   },
-  "homepage": "https://github.com/wu529778790/panhub.shenzjd.com#readme",
+  "homepage": "https://panhub.apprcn.com",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -34,7 +34,7 @@
   },
   "license": "MIT",
   "keywords": [
-    "panhub",
+    "反斗网盘搜索",
     "网盘搜索",
     "阿里云盘",
     "夸克",
